Fix bug where long todos overlapped

--- a/src/app/todo-item/todo-item.component.css
+++ b/src/app/todo-item/todo-item.component.css
@@ -2,8 +2,7 @@
   position: relative;
 
   display: flex;
-  align-items: center;
-  height: 48px;
+  align-items: flex-start;
 }
 
 .fade-in {
@@ -16,13 +15,19 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+}
+
+.text {
+  padding-top: 9px;
+  padding-bottom: 9px;
 }
 
 .btn {
   background: none;
   border: none;
   padding: 0;
+  padding-top: 7px;
   color: rgb(var(--white));
   margin-right: 10px;
 }
